--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,7 +14,7 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   test:
@@ -26,14 +26,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v6
-      with:
-        token: ${{ secrets.PERSONAL_TOKEN }}
-        ref: ${{ github.head_ref }}
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        bundler-cache: true 
     - name: Run tests
       run: bundle exec rake
     - name: Extract coverage percentage
@@ -58,11 +55,9 @@ jobs:
         <text x=\"66\" y=\"14\" fill=\"#fff\" font-family=\"Verdana\" font-size=\"11\">${{ steps.coverage.outputs.coverage }}%</text>
         </svg>" > coverage-badge.svg
         echo "badge_path=coverage-badge.svg" >> $GITHUB_OUTPUT
-    - name: Commit and push badge
-      uses: stefanzweifel/git-auto-commit-action@v7
+    - name: Back push
+      uses: jekyll-is/action-jekyll-is-backpush@v1
       with:
-        commit_message: Update coverage badge to ${{ steps.coverage.outputs.coverage }}% [skip ci]
-        file_pattern: coverage-badge.svg
-        branch: main
-        commit_user_name: github-actions
-        commit_user_email: github-actions@github.com
+        label: 'Coverage Badge'
+        telegram-bot-token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        telegram-user-id: ${{ secrets.MY_TG_ID }}
